# imx-audio-framework

./: .gitmodules  Makefile  README  SCR-imx-audio-framework.txt
common/api/: xaf-api.c  xaf-api.h
common/include/: library_load.h
common/include/fsl_unia/: dsp_codec_interface.h  fsl_unia.h
common/libloader/: library_load.c  library_load.h
common/proxy/: xf-debug.h  xf-fio.c  xf-ipc.h  xf-opcode.h  xf-osal.h  xf-proxy.c  xf-proxy.h  xf-types.h
common/src/: library_load.c  xaf-fsl-api.c  xf-fsl-ipc.c
docs/: DSP_User_Guide.doc  HiFi4_DSP_User_Guide.doc
dsp_framework/: Makefile  tensorflow_lite_micro.inc
dsp_framework/arch/: board.h  dpu_lib_load.c  dpu_lib_load.h  peripheral.c  peripheral.h  printf.c  printf.h  system_address.h
dsp_framework/arch/libloader/: common.c  pi_library_load.c
dsp_framework/component/: xa-factory.c
dsp_framework/component/audio/: xa-class-audio-codec.c  xa-class-base.c  xa-class-base.h  xa-class-renderer.c
dsp_framework/include/: board.h  debug.h  dpu_lib_load.h  fsl_mu.h  hardware.h  memory.h  mydefs.h  remoteproc.h  rpmsg_config.h  rpmsg_platform.h  rsc_table.h  types.h  xf-component.h  xf-core.h  xf-debug.h  xf-hal.h  xf-io.h  xf-msg.h  xf-opcode.h  xf-proxy.h  xf-sched.h  xf-shmem.h  xf-types.h
dsp_framework/include/audio/: xa-renderer-api.h  xf-audio-apicmd.h
dsp_framework/include/driver/: asrc.h  dsp_irq_handler.h  easrc.h  edma.h  esai.h  fsl_dma.h  fsl_lpuart.h  fsl_mu.h  fsl_uart.h  i2c.h  io.h  irqstr.h  micfil.h  sai.h  sdma.h  sdma_script_code_imx7d_4_5.h  uni_dma.h  wm8960.h  wm8962.h  wrap_dma.h
dsp_framework/include/plugins/: xa-unia-codec.h  xa-voiceprocess-api.h  xf-audio-apicmd.h
dsp_framework/init/: main.c
dsp_framework/ipc/: fsl_mu.c  rpmsg_env_bm.c  rpmsg_platform.c  xf-msg.c  xf-shmem.c
dsp_framework/memmap/imx8/: memmap.xmm  sim.parm  specs
dsp_framework/memmap/imx8m/: memmap.xmm  sim.parm  specs
dsp_framework/memmap/imx8ulp/: memmap.xmm  specs
dsp_framework/memory/: memory.c
dsp_framework/plugins/audio_codec/: dsp_codec_interface.h  xa-pcm-api.h  xa-pcm.c  xa-unia-codec.c
dsp_framework/plugins/renderer/: asrc.c  asrc.h  dsp_renderer_interface.h  easrc.c  easrc.h  easrc_firmware.h  edma.c  edma.h  esai.c  esai.h  i2c.c  i2c.h  io.c  io.h  irqstr.c  irqstr.h  sai.c  sai.h  sdma.c  sdma.h  uni_dma.h  wm8960.c  wrap_dma.c  wrap_dma.h  xa-renderer-esai.c  xa-renderer-xsai.c
dsp_framework/runtime/: xf-core.c  xf-io.c  xf-sched.c
dsp_framework/runtime/util/: rbtree.c
dsp_framework/src/: board.c  fsl_msgq.c  main.c  memory.c  printf.c  rpmsg_env_bm.c  rpmsg_platform.c  rsc_table.c
dsp_framework/src/driver/: dsp_irq_handler.c  easrc.c  edma.c  esai.c  fsl_dma.c  fsl_lpuart.c  fsl_mu.c  fsl_uart.c  i2c.c  io.c  irqstr.c  micfil.c  sai.c  sdma.c  wm8960.c  wm8962.c  wrap_dma.c
dsp_framework/src/libloader/: dpu_lib_load.c
dsp_framework/src/plugins/: xa-fsl-capturer.c  xa-fsl-renderer.c  xa-unia-codec.c  xa-voiceprocess.c
dsp_voice_process/: Makefile
dsp_voice_process/include/: voice_process.h
dsp_voice_process/src/: voice_process_dummy.c  voice_process_wrap.c
dsp_wrapper/: Makefile  common.mk  lib_dsp_wrap.mk
dsp_wrapper/include/: dsp_wrap.h
dsp_wrapper/include/uni_audio/: fsl_types.h  fsl_unia.h
dsp_wrapper/src/: dsp_dec.c  dsp_wrap.c
hifi4_framework/: Makefile
hifi4_framework/arch/: dpu_lib_load.c  dpu_lib_load.h  peripheral.c  peripheral.h  printf.c  printf.h  system_address.h
hifi4_framework/arch/libloader/: pi_relocate_lib.c
hifi4_framework/component/: xa-factory.c
hifi4_framework/component/audio/: hifi_codec_interface.h  xa-class-audio-codec.c  xa-class-base.c  xa-class-base.h
hifi4_framework/include/: dpu_lib_load.h  elf.h  icm_dpu.h  intr_utils.h  loader_internal.h  memory.h  mydefs.h  mytypes.h  peripheral.h  printf.h  process.h  system_address.h  xf-component.h  xf-core.h  xf-debug.h  xf-io.h  xf-msg.h  xf-sched.h  xf-shmem.h  xf-types.h
hifi4_framework/include/lib/: rbtree.h
hifi4_framework/init/: main.c
hifi4_framework/ipc/: xf-msg.c  xf-shmem.c
hifi4_framework/memory/: memory.c
hifi4_framework/runtime/: xf-core.c  xf-io.c
hifi4_framework/src/: common.c  dpu_lib_load.c  icm_dpu.c  intr_utils.c  main.c  memory.c  peripheral.c  pi_library_load.c  pi_relocate_lib.c  printf.c  process.c
hifi4_wrapper/: common.mk  lib_dsp_wrap.mk
hifi4_wrapper/include/: dsp_wrap.h
hifi4_wrapper/src/: dsp_dec.c  dsp_wrap.c
include/: hifi_codec_interface.h  mxc_dsp.h  mxc_hifi4.h
libxa_af_hostless/: .cproject  .project  .xxproject  Makefile  Makefile.include  README.txt  license.txt
libxa_af_hostless/include/: xaf-api.h  xf-debug.h
libxa_af_hostless/include/audio/: xa-capturer-api.h  xa-mimo-proc-api.h  xa-renderer-api.h
release/build_dsp/: COPYING  Makefile.am  README  autogen.sh  configure.ac  ghdr  libfsldspframework.pc.in  release
release/build_hifi4/: Makefile.am  configure.ac  ghdr  libfsldspframework.pc.in
testxa_af_hostless/: .cproject  .project  .xxproject  Makefile  README.html
testxa_af_hostless/launch/: af_hostless_cycle.launch  af_hostless_turbo.launch
testxa_af_hostless/test/include/: xaf-mem.h  xaf-test.h  xaf-utils-test.h
testxa_af_hostless/test/plugins/: xa-factory.c
testxa_af_hostless/test/src/: xaf-aac-dec-test.c  xaf-amr-wb-dec-test.c  xaf-capturer-mp3-enc-test.c  xaf-clk-test.c  xaf-dec-mix-test.c  xaf-dec-test.c  xaf-fio-test.c  xaf-full-duplex-test.c  xaf-gain-renderer-test.c  xaf-mem-test.c  xaf-mimo-mix-test.c  xaf-mp3-dec-rend-test.c  xaf-pcm-gain-test.c  xaf-playback-usecase-test.c  xaf-renderer-ref-port-test.c  xaf-src-test.c  xaf-utils-test.c  xaf-vorbis-dec-test.c
testxa_af_hostless/test/test_inp/: hihat.pcm  hihat_1ch_16b_44.1kHz.adts  perf_aacplusv1_stereo_56Kbps_48kHz.adts  sine.pcm  spch_le_dtx.cod  (+1 more)
unit_test/: Makefile
unit_test/include/: common.h  get_pcm_info.h  id3_tag_decode.h
unit_test/src/: common.c  dsp_test.c  dsp_tflm_test.c  get_pcm_info.c  id3_tag_decode.c  xaf-fsl-capturer-pcm-gain-test.c  xaf-fsl-dec-test.c  xaf-fsl-mimo-voice-process-test.c  xaf-fsl-mp3-dec-rend-test.c
(+79 files in other folders)
